[gd_scene load_steps=8 format=3 uid="uid://k04cff0ltdka"]

[ext_resource type="Script" path="res://Scripts/final_boss.gd" id="1_xrt76"]
[ext_resource type="PackedScene" uid="uid://dyux3oh0sotah" path="res://card_deck/deck.tscn" id="2_1rg8x"]
[ext_resource type="PackedScene" uid="uid://c71lhcqy8hqru" path="res://player/player.tscn" id="3_qi0vt"]
[ext_resource type="PackedScene" uid="uid://c63m8tfiigc3" path="res://Scenes/HUD.tscn" id="4_q6yg1"]
[ext_resource type="PackedScene" uid="uid://1tukfv0nnmly" path="res://Scenes/Abilities.tscn" id="5_qb8kb"]
[ext_resource type="PackedScene" uid="uid://dpifh77h8jhn3" path="res://Scenes/dealer.tscn" id="6_bkylh"]
[ext_resource type="Script" path="res://Scripts/final_subject.gd" id="7_veo5x"]

[node name="FinalBoss" type="Node2D"]
script = ExtResource("1_xrt76")

[node name="Deck" parent="." instance=ExtResource("2_1rg8x")]

[node name="Player" parent="." instance=ExtResource("3_qi0vt")]
position = Vector2(537, 254)

[node name="HUD" parent="." instance=ExtResource("4_q6yg1")]

[node name="AbilityManager" parent="." instance=ExtResource("5_qb8kb")]

[node name="Dealer" parent="." instance=ExtResource("6_bkylh")]
script = ExtResource("7_veo5x")

[connection signal="round_over_main" from="." to="." method="_on_round_over_main"]
